--- a/_astro/index.B8mDslFh.css
+++ b/_astro/index.B8mDslFh.css
@@ -1,1 +1,545 @@
-i[data-astro-cid-dohjnao5]{font-size:50px;color:#fff;padding:10px;border:3px solid rgb(0,0,0);border-radius:30px}h2[data-astro-cid-dohjnao5]{color:#08f}p[data-astro-cid-dohjnao5]{text-align:justify}.card[data-astro-cid-dohjnao5]{color:#fff;width:350px;height:400px;background-color:#12053d;padding:2em;text-align:center;border-radius:10px;position:relative}.card[data-astro-cid-dohjnao5]:after,.card[data-astro-cid-dohjnao5]:before{content:"";position:absolute;height:100%;width:100%;background-image:conic-gradient(from var(--angle),blue,rgb(94,255,0),red);top:50%;left:50%;translate:-50% -50%;z-index:-1;padding:3px;border-radius:10px;animation:3s spin linear infinite}.card[data-astro-cid-dohjnao5]:before{filter:blur(1.5rem);opacity:.5}@keyframes spin{0%{--angle:0deg}to{--angle:360deg}}img[data-astro-cid-hmmxu4zp]{width:100%;height:100%;border-radius:10px}.btn[data-astro-cid-hmmxu4zp]{left:2px;margin:5px 0 0;position:absolute;top:0}.btn[data-astro-cid-hmmxu4zp] a[data-astro-cid-hmmxu4zp] button[data-astro-cid-hmmxu4zp]{background-color:#0a002a;border-radius:10px;width:100px;height:40px;color:#f0f8ff;transition:1s}.btn[data-astro-cid-hmmxu4zp] a[data-astro-cid-hmmxu4zp] button[data-astro-cid-hmmxu4zp]:hover{color:#000;background-color:#0ff}.card[data-astro-cid-hmmxu4zp]{color:#fff;width:418px;height:400px;background-color:#fff;text-align:center;border-radius:10px;position:relative}@property --angle{syntax: "<angle>"; initial-value: 0deg; inherits: false;}.card[data-astro-cid-hmmxu4zp]:after,.card[data-astro-cid-hmmxu4zp]:before{content:"";position:absolute;height:100%;width:100%;background-image:conic-gradient(from var(--angle),rgb(123,255,0),rgb(0,255,179),rgb(255,251,0));top:50%;left:50%;translate:-50% -50%;z-index:-1;padding:3px;border-radius:10px;animation:3s spin linear infinite}.card[data-astro-cid-hmmxu4zp]:before{filter:blur(1.5rem);opacity:.5}@keyframes spin{0%{--angle: 0deg}to{--angle: 360deg}}form[data-astro-cid-xjughlio]{display:flex;flex-direction:column;padding:10px;color:#fff;width:40%;box-shadow:0 0 10px 10px #3e6bbf;border-radius:20px}label[data-astro-cid-xjughlio]{font-family:Cambria,Cochin,Georgia,Times,Times New Roman,serif;color:#fff}input[data-astro-cid-xjughlio]{padding:10px;width:80%;height:20px;border-radius:10px}textarea[data-astro-cid-xjughlio]{padding:10px;width:80%;height:100px;border-radius:10px}button[data-astro-cid-xjughlio]{background-color:red;color:#fff;border-radius:5px;width:100px;height:30px;font-family:Cambria,Cochin,Georgia,Times,Times New Roman,serif}@media (min-width: 992px) and (max-width: 1199px){form[data-astro-cid-xjughlio]{width:60%}}@media (min-width: 768px) and (max-width: 991px){form[data-astro-cid-xjughlio]{width:75%}}@media (max-width: 767px){form[data-astro-cid-xjughlio]{width:80%}}.container[data-astro-cid-kqty5qjk]{margin:20px 0;width:100%;display:flex;color:#fff}.foto[data-astro-cid-kqty5qjk]{display:flex;width:50%;align-items:center;justify-content:center}.foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk]{width:65%;height:600px;border-radius:10px;box-shadow:0 0 20px 5px #0037ff}.container-info[data-astro-cid-kqty5qjk]{width:50%}.info[data-astro-cid-kqty5qjk]{margin:50px 0 0;width:80%;text-align:justify}.info-general[data-astro-cid-kqty5qjk]{display:flex}.respuesta[data-astro-cid-kqty5qjk]{margin:0 0 0 10px}@media (min-width: 1200px){.container[data-astro-cid-kqty5qjk]{margin-top:120px}}@media (min-width: 992px) and (max-width: 1199px){.container[data-astro-cid-kqty5qjk]{flex-direction:column}.foto[data-astro-cid-kqty5qjk]{width:100%;margin-top:20px}.foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk]{width:50%}.container-info[data-astro-cid-kqty5qjk]{width:100%}.info[data-astro-cid-kqty5qjk]{margin:auto}}@media (min-width: 768px) and (max-width: 991px){.container[data-astro-cid-kqty5qjk]{flex-direction:column}.foto[data-astro-cid-kqty5qjk]{width:100%;margin-top:25px}.container-info[data-astro-cid-kqty5qjk]{width:100%}.info[data-astro-cid-kqty5qjk]{margin:auto}.info-general[data-astro-cid-kqty5qjk]{font-size:16px}.foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk]{margin:50px 0 0}}@media (max-width: 767px){.container[data-astro-cid-kqty5qjk]{flex-direction:column}.foto[data-astro-cid-kqty5qjk]{width:100%;margin-top:30px}.foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk]{width:60%;height:350px}.container-info[data-astro-cid-kqty5qjk]{width:100%}.info[data-astro-cid-kqty5qjk]{margin:auto}.info-general[data-astro-cid-kqty5qjk]{display:flex;font-size:10px}.foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk]{margin:15px 0 0}}body{margin:0;font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}header[data-astro-cid-3ef6ksr2]{width:100%;height:703px;position:relative;overflow:hidden;color:#fff}.header-image[data-astro-cid-3ef6ksr2]{position:absolute;top:0;left:0;width:100%;height:100%;z-index:-1}.nav-container[data-astro-cid-3ef6ksr2]{display:flex;justify-content:space-around;align-items:center}li[data-astro-cid-3ef6ksr2],a[data-astro-cid-3ef6ksr2]{list-style:none;text-decoration:none;font-size:18px;color:#fff;transition:.5s}a[data-astro-cid-3ef6ksr2]{margin-right:20px}ul[data-astro-cid-3ef6ksr2]{display:flex;text-align:center;padding:0}li[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]:hover{color:#0ff}.nav-name[data-astro-cid-3ef6ksr2] h1[data-astro-cid-3ef6ksr2]{cursor:pointer;transition:.5s}.nav-name[data-astro-cid-3ef6ksr2] h1[data-astro-cid-3ef6ksr2]:hover{color:red}.container-name[data-astro-cid-3ef6ksr2]{text-align:center;width:100%}.container-name[data-astro-cid-3ef6ksr2] h1[data-astro-cid-3ef6ksr2],p[data-astro-cid-3ef6ksr2]{margin:0}.name[data-astro-cid-3ef6ksr2]{margin:100px 0}.redes[data-astro-cid-3ef6ksr2]{margin:10px 0 0}.redes[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{position:relative;text-decoration:none}.redes[data-astro-cid-3ef6ksr2] i[data-astro-cid-3ef6ksr2]{font-size:35px}.redes[data-astro-cid-3ef6ksr2] p[data-astro-cid-3ef6ksr2]{display:none;position:absolute;bottom:-35px;left:50%;transform:translate(-50%);border:1px solid rgb(255,255,255);padding:5px;border-radius:3px;font-size:14px;white-space:nowrap}.redes[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]:hover p[data-astro-cid-3ef6ksr2]{display:block}.red-name[data-astro-cid-3ef6ksr2]{margin:20px}@media (min-width: 992px) and (max-width: 1199px){.nav-container[data-astro-cid-3ef6ksr2]{flex-direction:column}.name[data-astro-cid-3ef6ksr2]{margin:60px 0}.nav-container[data-astro-cid-3ef6ksr2] nav[data-astro-cid-3ef6ksr2]{width:100%;display:flex;justify-content:center}}@media (min-width: 768px) and (max-width: 991px){.nav-container[data-astro-cid-3ef6ksr2]{flex-direction:column}.name[data-astro-cid-3ef6ksr2]{margin:60px 0}a[data-astro-cid-3ef6ksr2]{font-size:15px}.nav-container[data-astro-cid-3ef6ksr2] nav[data-astro-cid-3ef6ksr2]{width:100%;display:flex;justify-content:center}}@media (max-width: 767px){.nav-container[data-astro-cid-3ef6ksr2]{flex-direction:column}.name[data-astro-cid-3ef6ksr2]{margin:50px 0}a[data-astro-cid-3ef6ksr2]{font-size:14px}nav[data-astro-cid-3ef6ksr2]{width:100%}.nav-container[data-astro-cid-3ef6ksr2]{justify-content:center}.nav-container[data-astro-cid-3ef6ksr2] nav[data-astro-cid-3ef6ksr2]{width:100%;display:flex;justify-content:center}}html{font-family:system-ui,sans-serif;background:#000}code{font-family:Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace}h2[data-astro-cid-j7pv25f6],i[data-astro-cid-j7pv25f6]{color:#fff;font-size:30px;text-align:center}.card-contents[data-astro-cid-j7pv25f6]{display:flex;justify-content:center;flex-wrap:wrap;gap:50px}.contacto-content[data-astro-cid-j7pv25f6]{display:flex;justify-content:center}.card-contents[data-astro-cid-j7pv25f6]>[data-astro-cid-j7pv25f6]{flex:1 1 calc(33.333% - 32px);box-sizing:border-box}.cardinfo[data-astro-cid-j7pv25f6]{flex:1 1 calc(33.333% - 32px);box-sizing:border-box}@media (max-width: 768px){.card-contents[data-astro-cid-j7pv25f6]>[data-astro-cid-j7pv25f6]{flex:1 1 calc(50% - 16px)}.cardinfo[data-astro-cid-j7pv25f6]{flex:1 1 calc(50% - 16px)}}@media (max-width: 480px){.card-contents[data-astro-cid-j7pv25f6]>[data-astro-cid-j7pv25f6]{flex:1 1 100%}.cardinfo[data-astro-cid-j7pv25f6]{flex:1 1 100%}}
+i[data-astro-cid-dohjnao5] {
+    font-size: 50px;
+    color: #fff;
+    padding: 10px;
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 30px
+}
+
+h2[data-astro-cid-dohjnao5] {
+    color: #08f
+}
+
+p[data-astro-cid-dohjnao5] {
+    text-align: justify
+}
+
+.card[data-astro-cid-dohjnao5] {
+    color: #fff;
+    width: 350px;
+    height: 400px;
+    background-color: #12053d;
+    padding: 2em;
+    text-align: center;
+    border-radius: 10px;
+    position: relative
+}
+
+.card[data-astro-cid-dohjnao5]:after,
+.card[data-astro-cid-dohjnao5]:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-image: conic-gradient(from var(--angle), blue, rgb(94, 255, 0), red);
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 3px;
+    border-radius: 10px;
+    animation: 3s spin linear infinite
+}
+
+.card[data-astro-cid-dohjnao5]:before {
+    filter: blur(1.5rem);
+    opacity: .5
+}
+
+@keyframes spin {
+    0% {
+        --angle: 0deg
+    }
+
+    to {
+        --angle: 360deg
+    }
+}
+
+img[data-astro-cid-hmmxu4zp] {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px
+}
+
+.btn[data-astro-cid-hmmxu4zp] {
+    left: 2px;
+    margin: 5px 0 0;
+    position: absolute;
+    top: 0
+}
+
+.btn[data-astro-cid-hmmxu4zp] a[data-astro-cid-hmmxu4zp] button[data-astro-cid-hmmxu4zp] {
+    background-color: #0a002a;
+    border-radius: 10px;
+    width: 100px;
+    height: 40px;
+    color: #f0f8ff;
+    transition: 1s
+}
+
+.btn[data-astro-cid-hmmxu4zp] a[data-astro-cid-hmmxu4zp] button[data-astro-cid-hmmxu4zp]:hover {
+    color: #000;
+    background-color: #0ff
+}
+
+.card[data-astro-cid-hmmxu4zp] {
+    color: #fff;
+    width: 418px;
+    height: 400px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 10px;
+    position: relative
+}
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+.card[data-astro-cid-hmmxu4zp]:after,
+.card[data-astro-cid-hmmxu4zp]:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-image: conic-gradient(from var(--angle), rgb(123, 255, 0), rgb(0, 255, 179), rgb(255, 251, 0));
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 3px;
+    border-radius: 10px;
+    animation: 3s spin linear infinite
+}
+
+.card[data-astro-cid-hmmxu4zp]:before {
+    filter: blur(1.5rem);
+    opacity: .5
+}
+
+@keyframes spin {
+    0% {
+        --angle: 0deg
+    }
+
+    to {
+        --angle: 360deg
+    }
+}
+
+form[data-astro-cid-xjughlio] {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    color: #fff;
+    width: 40%;
+    box-shadow: 0 0 10px 10px #3e6bbf;
+    border-radius: 20px
+}
+
+label[data-astro-cid-xjughlio] {
+    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif;
+    color: #fff
+}
+
+input[data-astro-cid-xjughlio] {
+    padding: 10px;
+    width: 80%;
+    height: 20px;
+    border-radius: 10px
+}
+
+textarea[data-astro-cid-xjughlio] {
+    padding: 10px;
+    width: 80%;
+    height: 100px;
+    border-radius: 10px
+}
+
+button[data-astro-cid-xjughlio] {
+    background-color: red;
+    color: #fff;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, Times New Roman, serif
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    form[data-astro-cid-xjughlio] {
+        width: 60%
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    form[data-astro-cid-xjughlio] {
+        width: 75%
+    }
+}
+
+@media (max-width: 767px) {
+    form[data-astro-cid-xjughlio] {
+        width: 80%
+    }
+}
+
+.container[data-astro-cid-kqty5qjk] {
+    margin: 20px 0;
+    width: 100%;
+    display: flex;
+    color: #fff
+}
+
+.foto[data-astro-cid-kqty5qjk] {
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: center
+}
+
+.foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk] {
+    width: 65%;
+    height: 600px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 5px #0037ff
+}
+
+.container-info[data-astro-cid-kqty5qjk] {
+    width: 50%
+}
+
+.info[data-astro-cid-kqty5qjk] {
+    margin: 50px 0 0;
+    width: 80%;
+    text-align: justify
+}
+
+.info-general[data-astro-cid-kqty5qjk] {
+    display: flex
+}
+
+.respuesta[data-astro-cid-kqty5qjk] {
+    margin: 0 0 0 10px
+}
+
+@media (min-width: 1200px) {
+    .container[data-astro-cid-kqty5qjk] {
+        margin-top: 120px
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .container[data-astro-cid-kqty5qjk] {
+        flex-direction: column
+    }
+
+    .foto[data-astro-cid-kqty5qjk] {
+        width: 100%;
+        margin-top: 20px
+    }
+
+    .foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk] {
+        width: 50%
+    }
+
+    .container-info[data-astro-cid-kqty5qjk] {
+        width: 100%
+    }
+
+    .info[data-astro-cid-kqty5qjk] {
+        margin: auto
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .container[data-astro-cid-kqty5qjk] {
+        flex-direction: column
+    }
+
+    .foto[data-astro-cid-kqty5qjk] {
+        width: 100%;
+        margin-top: 25px
+    }
+
+    .container-info[data-astro-cid-kqty5qjk] {
+        width: 100%
+    }
+
+    .info[data-astro-cid-kqty5qjk] {
+        margin: auto
+    }
+
+    .info-general[data-astro-cid-kqty5qjk] {
+        font-size: 16px
+    }
+
+    .foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk] {
+        margin: 50px 0 0
+    }
+}
+
+@media (max-width: 767px) {
+    .container[data-astro-cid-kqty5qjk] {
+        flex-direction: column
+    }
+
+    .foto[data-astro-cid-kqty5qjk] {
+        width: 100%;
+        margin-top: 30px
+    }
+
+    .foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk] {
+        width: 60%;
+        height: 350px
+    }
+
+    .container-info[data-astro-cid-kqty5qjk] {
+        width: 100%
+    }
+
+    .info[data-astro-cid-kqty5qjk] {
+        margin: auto
+    }
+
+    .info-general[data-astro-cid-kqty5qjk] {
+        display: flex;
+        font-size: 10px
+    }
+
+    .foto[data-astro-cid-kqty5qjk] img[data-astro-cid-kqty5qjk] {
+        margin: 15px 0 0
+    }
+}
+
+body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif
+}
+
+header[data-astro-cid-3ef6ksr2] {
+    width: 100%;
+    height: 703px;
+    position: relative;
+    overflow: hidden;
+    color: #fff
+}
+
+.header-image[data-astro-cid-3ef6ksr2] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1
+}
+
+.nav-container[data-astro-cid-3ef6ksr2] {
+    display: flex;
+    justify-content: space-around;
+    align-items: center
+}
+
+li[data-astro-cid-3ef6ksr2],
+a[data-astro-cid-3ef6ksr2] {
+    list-style: none;
+    text-decoration: none;
+    font-size: 18px;
+    color: #fff;
+    transition: .5s
+}
+
+a[data-astro-cid-3ef6ksr2] {
+    margin-right: 20px
+}
+
+ul[data-astro-cid-3ef6ksr2] {
+    display: flex;
+    text-align: center;
+    padding: 0
+}
+
+li[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]:hover {
+    color: #0ff
+}
+
+.nav-name[data-astro-cid-3ef6ksr2] h1[data-astro-cid-3ef6ksr2] {
+    cursor: pointer;
+    transition: .5s
+}
+
+.nav-name[data-astro-cid-3ef6ksr2] h1[data-astro-cid-3ef6ksr2]:hover {
+    color: red
+}
+
+.container-name[data-astro-cid-3ef6ksr2] {
+    text-align: center;
+    width: 100%
+}
+
+.container-name[data-astro-cid-3ef6ksr2] h1[data-astro-cid-3ef6ksr2],
+p[data-astro-cid-3ef6ksr2] {
+    margin: 0
+}
+
+.name[data-astro-cid-3ef6ksr2] {
+    margin: 100px 0
+}
+
+.redes[data-astro-cid-3ef6ksr2] {
+    margin: 10px 0 0
+}
+
+.redes[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2] {
+    position: relative;
+    text-decoration: none
+}
+
+.redes[data-astro-cid-3ef6ksr2] i[data-astro-cid-3ef6ksr2] {
+    font-size: 35px
+}
+
+.redes[data-astro-cid-3ef6ksr2] p[data-astro-cid-3ef6ksr2] {
+    display: none;
+    position: absolute;
+    bottom: -35px;
+    left: 50%;
+    transform: translate(-50%);
+    border: 1px solid rgb(255, 255, 255);
+    padding: 5px;
+    border-radius: 3px;
+    font-size: 14px;
+    white-space: nowrap
+}
+
+.redes[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]:hover p[data-astro-cid-3ef6ksr2] {
+    display: block
+}
+
+.red-name[data-astro-cid-3ef6ksr2] {
+    margin: 20px
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .nav-container[data-astro-cid-3ef6ksr2] {
+        flex-direction: column
+    }
+
+    .name[data-astro-cid-3ef6ksr2] {
+        margin: 60px 0
+    }
+
+    .nav-container[data-astro-cid-3ef6ksr2] nav[data-astro-cid-3ef6ksr2] {
+        width: 100%;
+        display: flex;
+        justify-content: center
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .nav-container[data-astro-cid-3ef6ksr2] {
+        flex-direction: column
+    }
+
+    .name[data-astro-cid-3ef6ksr2] {
+        margin: 60px 0
+    }
+
+    a[data-astro-cid-3ef6ksr2] {
+        font-size: 15px
+    }
+
+    .nav-container[data-astro-cid-3ef6ksr2] nav[data-astro-cid-3ef6ksr2] {
+        width: 100%;
+        display: flex;
+        justify-content: center
+    }
+}
+
+@media (max-width: 767px) {
+    .nav-container[data-astro-cid-3ef6ksr2] {
+        flex-direction: column
+    }
+
+    .name[data-astro-cid-3ef6ksr2] {
+        margin: 50px 0
+    }
+
+    a[data-astro-cid-3ef6ksr2] {
+        font-size: 14px
+    }
+
+    nav[data-astro-cid-3ef6ksr2] {
+        width: 100%
+    }
+
+    .nav-container[data-astro-cid-3ef6ksr2] {
+        justify-content: center
+    }
+
+    .nav-container[data-astro-cid-3ef6ksr2] nav[data-astro-cid-3ef6ksr2] {
+        width: 100%;
+        display: flex;
+        justify-content: center
+    }
+}
+
+html {
+    font-family: system-ui, sans-serif;
+    background: #000
+}
+
+code {
+    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace
+}
+
+h2[data-astro-cid-j7pv25f6],
+i[data-astro-cid-j7pv25f6] {
+    color: #fff;
+    font-size: 30px;
+    text-align: center
+}
+
+.card-contents[data-astro-cid-j7pv25f6] {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px
+}
+
+.contacto-content[data-astro-cid-j7pv25f6] {
+    display: flex;
+    justify-content: center
+}
+
+.card-contents[data-astro-cid-j7pv25f6]>[data-astro-cid-j7pv25f6] {
+    flex: 1 1 calc(33.333% - 32px);
+    box-sizing: border-box
+}
+
+.cardinfo[data-astro-cid-j7pv25f6] {
+    flex: 1 1 calc(33.333% - 32px);
+    box-sizing: border-box
+}
+
+@media (max-width: 768px) {
+    .card-contents[data-astro-cid-j7pv25f6]>[data-astro-cid-j7pv25f6] {
+        flex: 1 1 calc(50% - 16px)
+    }
+
+    .cardinfo[data-astro-cid-j7pv25f6] {
+        flex: 1 1 calc(50% - 16px)
+    }
+}
+
+@media (max-width: 480px) {
+    .card-contents[data-astro-cid-j7pv25f6]>[data-astro-cid-j7pv25f6] {
+        flex: 1 1 100%
+    }
+
+    .cardinfo[data-astro-cid-j7pv25f6] {
+        flex: 1 1 100%
+    }
+}
